# rm_ds_store

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
