[package]
name = "rm_ds_store"
version = "0.1.0"
edition = "2021"
authors = ["syfangjie@live.cn"]
description = "Command line tool to help delete Mac OS DS_Stroe files."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = 'rmds'

[dependencies]
glob = "0.3.1"
clap = { version = "4.1.8", features = ["derive"] }
